# dynolog

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.otlp  Dockerfile.otlp-test  README.md  RELEASE.md  docker-compose.yml  dynolog.dockerfile  dynolog_hta.dockerfile
dynolog/: CMakeLists.txt  README.md
dynolog/docs/: Metrics.md  logging_to_ods.md  pytorch_profiler.md
dynolog/src/: CMakeLists.txt  CPUTimeMonitor.cpp  CPUTimeMonitor.h  CompositeLogger.cpp  CompositeLogger.h  DynoCPUTimeMonitor.cpp  DynoCPUTimeMonitor.h  DynoMonitorBase.h  DynoTicker.h  EthtoolStatsReader.cpp  EthtoolStatsReader.h  FBRelayLogger.cpp  FBRelayLogger.h  KernelCollector.cpp  KernelCollector.h  KernelCollectorBase.cpp  KernelCollectorBase.h  KvmStatsCollector.cpp  KvmStatsCollector.h  LibkinetoConfigManager.cpp  LibkinetoConfigManager.h  LibkinetoJobRegistry.cpp  LibkinetoJobRegistry.h  LibkinetoTypes.h  Logger.cpp  Logger.h  Main.cpp  Metrics.cpp  Metrics.h  MonitorBase.h  ODSJsonLogger.cpp  ODSJsonLogger.h  OtlpLogger.cpp  OtlpLogger.h  OtlpMetricsLogger.cpp  OtlpMetricsLogger.h  PerfMonitor.cpp  PerfMonitor.h  PrometheusLogger.cpp  PrometheusLogger.h  (+10 more)
dynolog/src/cli/src/commands/: mod.rs
dynolog/src/gpumon/: CMakeLists.txt  DcgmApiStub.cpp  DcgmApiStub.h  DcgmGroupInfo.cpp  DcgmGroupInfo.h  Entity.cpp  Entity.h  NvidiaSmiPidReader.cpp  NvidiaSmiPidReader.h  Utils.cpp  Utils.h  dcgm_agent.h  dcgm_api_export.h  dcgm_errors.h  dcgm_fields.h  dcgm_structs.h
dynolog/src/gpumon/amd/: AmdDeviceTopology.cpp  AmdDeviceTopology.h  CMakeLists.txt  RdcWrapper.cpp  RdcWrapper.h
dynolog/src/gpumon/amd/examples/: CMakeLists.txt  RdcWrapperExample.cpp
dynolog/src/ipcfabric/: CMakeLists.txt  Endpoint.h  FabricManager.h  Utils.h
dynolog/src/ipcfabric/tests/: CMakeLists.txt
dynolog/src/k8s/: CMakeLists.txt  K8sPodCache.cpp  K8sPodCache.h  PodResourcesClient.cpp  PodResourcesClient.h
dynolog/src/k8s/kubelet_podresources/: api.proto
dynolog/src/metric_frame/: CMakeLists.txt  ExtraTypes.cpp  ExtraTypes.h  MetricFrame.cpp  MetricFrame.h  MetricFrameBase.cpp  MetricFrameBase.h  MetricFrameTsUnit.cpp  MetricFrameTsUnit.h  MetricFrameTsUnitInterface.h  MetricSeries.h  MetricValues.h  TextTable.cpp  TextTable.h
dynolog/src/procfs/parser/: InterruptStatsMonitor.cpp  InterruptStatsMonitor.h
dynolog/src/rdmamon/: CMakeLists.txt  EthtoolCounters.cpp  EthtoolCounters.h  RdmaCounters.cpp  RdmaCounters.h  RdmaMonitor.cpp  RdmaMonitor.h  SysfsCounter.cpp  SysfsCounter.h
dynolog/src/rpc/: CMakeLists.txt  SimpleJsonServer.cpp  SimpleJsonServer.h  SimpleJsonServerInl.h
dynolog/src/threadmon/: TaskStatsData.h
dynolog/src/tracing/: CMakeLists.txt  IPCMonitor.cpp  IPCMonitor.h
dynolog/tests/: BuildTests.cmake  CMakeLists.txt  CPUTimeMonitorTest.cpp  DynoCPUTimeMonitorTest.cpp  DynoMonitorTickerTest.cpp  EthtoolStatsReaderTest.cpp  InterruptStatsMonitorTest.cpp  KernelCollecterTest.cpp  LibkinetoConfigManagerTest.cpp  MonitorTickerTest.cpp  OtlpLoggerTest.cpp  OtlpMetricsLoggerTest.cpp  PrometheusLoggerTest.cpp  StringTest.cpp  otel-collector-config.yaml
dynolog/tests/gpumon/amd/: AmdDeviceTopologyTest.cpp  RdcWrapperTest.cpp
dynolog/tests/ipcfabric/: CMakeLists.txt  IPCFabricTest.cpp  IPCSender.cpp
dynolog/tests/metric_frame/: CMakeLists.txt  MetricFrameTest.cpp  MetricFrameTsUnitTest.cpp  MetricSeriesTest.cpp  MetricValuesTest.cpp  TextTableTest.cpp
dynolog/tests/rdmamon/: RdmaMonitorTests.cpp  SysfsCountersTests.cpp
dynolog/tests/root/proc/: stat
dynolog/tests/rpc/: CMakeLists.txt  SimpleJsonClientTest.cpp  SimpleJsonClientTest.h  SimpleJsonClientTestCLI.cpp
dynolog/tests/tracing/: CMakeLists.txt  IPCMonitorTest.cpp
hbt/src/common/: CMakeLists.txt  Defaults.h  Defs.h  ProcFsHelpers.h  System.cpp  System.h
hbt/src/common/tests/: CMakeLists.txt  DefsTest.cpp  SystemProcFsTest.cpp  SystemTest.cpp
hbt/src/intel_pt/: CMakeLists.txt  IptEventBuilder.cpp  IptEventBuilder.h  main.py  tracer.py
hbt/src/intel_pt/examples/: perf_script_output__cpu_wide_short.txt  perf_script_output__cpu_wide_tiny.txt  perf_script_output__stress.txt  perf_script_output__stress_ushort.txt
hbt/src/intel_pt/tests/: CMakeLists.txt  IptCapChecker.cpp  parse_lines__tests.py
hbt/src/mon/: CMakeLists.txt  Filter.cpp  Filter.h  IntelPTMonitor.cpp  IntelPTMonitor.h  MonData.cpp  MonData.h  Monitor.h  MuxQueueStrategy.h  PerCpuSliceGenerator.h  SchedulingStrategy.h  TimeSlotStrategy.h  TraceCollector.cpp  TraceCollector.h  TraceMonitor.cpp  TraceMonitor.h
hbt/src/mon/tests/: CMakeLists.txt  MonDataTest.cpp  MonitorMockTest.cpp  MonitorTest.cpp  MuxQueueStrategyTest.cpp  TimeSlotStrategyTest.cpp
hbt/src/perf_event/: AmdEvents.cpp  AmdEvents.h  ArmEvents.cpp  ArmEvents.h  BPerfCountReader.cpp  BPerfCountReader.h  BPerfEventsGroup.cpp  BPerfEventsGroup.h  BPerfPerThreadReader.cpp  BPerfPerThreadReader.h  BPerfPinnedMapNames.h  BuiltinMetrics.cpp  BuiltinMetrics.h  CMakeLists.txt  CpuArch.h  CpuEventsGroup.h  Metrics.cpp  Metrics.h  PerCpuBase.h  PerCpuCountReader.h  PerCpuCountSampleGenerator.h  PerCpuDummyGenerator.h  PerCpuSampleGeneratorBase.h  PerCpuThreadSwitchGenerator.h  PerCpuTraceAuxGenerator.h  PerPerfEventsGroupBase.h  PerUncoreCountReader.h  PerfEventsGroup.h  PmuDevices.cpp  PmuDevices.h  PmuEvent.cpp  PmuEvent.h  ThreadCountReader.h
hbt/src/perf_event/bpf/: bperf.h  bperf_leader_cgroup.bpf.c
hbt/src/perf_event/json_events/: CMakeLists.txt  README.rst  download.sh  generate.py
hbt/src/perf_event/tests/: ArmEventsTest.cpp  BPerfEventsGroupPerThreadTest.cpp  BPerfEventsGroupTest.cpp  BuiltinMetricsTest.cpp  CMakeLists.txt  ClocksTest.cpp  CpuEventsGroupTest.cpp  MockPerCpuCountReader.h  MockPerUncoreCountReader.h  PerCpuGeneratorsTest.cpp  PerfEventsGroupTest.cpp  PmuDevicesTest.cpp  ThreadCountReaderTest.cpp
tests/: CMakeLists.txt  KernelCollecterTest.cpp
tests/rpc/: CMakeLists.txt  SimpleJsonClientTest.cpp  SimpleJsonClientTest.h  SimpleJsonClientTestCLI.cpp
tests/tracing/: CMakeLists.txt  IPCMonitorTest.cpp
(+122 files in other folders)
